tests/baselines/reference/parserAccessors1.errors.txt
==== tests/cases/compiler/parserAccessors1.ts (1 errors) ====
    class C {
        get Foo() { }
            ~~~
!!! parserAccessors1.ts(2,9): error TS2126: Getters must return a value.
    }